jaml/examples/invalid/mixed_list_map.jaml
mixed_list_map:
  - foo
  bar: 2
